--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -7,7 +7,7 @@
 
 
     .ch-item {
-        width: 26%;
+        width: 28%;
         height: 37%;
         border-radius: 50%;
         position: relative;
@@ -129,19 +129,47 @@
       </div>
    <div class = "container">
    	  <div class = "hero-unit">
-		<legend> <strong> <h1> Our Team</h1> </strong> </legend>
-    <div class="ch-item ch-img-1">
-           <div class="ch-info">
-                  <h3>Ricardo Pietrobon</h3>
-            </div>           
-    </div>
-    Ricardo is an Associate Professor of Surgery and an Associate Professor in Anesthesiology
+		<legend> <strong> <h1> <center> Our Team </center> </h1> </strong> </legend>
+    <br>
+    <div class = "row-fluid">
+   
+        <div class="ch-item ch-img-1 span3">
+               <div class="ch-info">
+                      <h3>Ricardo Pietrobon</h3>
+                </div>    
+                
+        </div>
+        <div class = "offset3">
+              Ricardo is an Associate Professor of Surgery and an Associate Professor in Anesthesiology at the 
+              Duke University School of Medicine. He holds an MD from the Federal University of Parana (Brazil), 
+              a PhD from the University of North Carolina at Chapel Hill, and MBA from Duke University. His current
+              research interests include finding methods to improve quality and productivity of biomedical research.
+              <br>
+               <%= link_to "LinkedIn", "http://www.linkedin.com/profile/view?id=5629214&authType=OUT_OF_NETWORK&authToken=hTKX&locale=en_US&srchid=edf3abc6-5ec9-4c96-a850-d4f2b809d71f-0&srchindex=1&srchtotal=322160&goback=%2Efps_PBCK_ricardo_*1_*1_*1_*1_*1_*1_*2_*1_Y_*1_*1_*1_false_1_R_*1_*51_*1_*51_true_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2&pvs=ps&trk=pp_profile_name_link" %> |
+              <%= link_to "Duke Medicine", "http://surgery.duke.edu/faculty/details/0206217" %>  
+
+        </div>
+       
+  </div>
     <hr>
-     <div class="ch-item ch-img-2">
-           <div class="ch-info">
-                  <h3>Dan Deng</h3>
-            </div>
-    </div>
+       <div class = "row-fluid">
+   
+        <div class="ch-item ch-img-2 span3">
+               <div class="ch-info">
+                      <h3>Dan Deng</h3>
+                </div>    
+                
+        </div>
+        <div class = "offset3">
+              Dan is a rising senior at Duke University majoring in Computer Science. He holds a passion 
+              for technology and entrepreneurship, and currently interns at Groundwork Labs, a local start-up
+              accelerator. In his free time, he enjoys learning new ways to build web and mobile apps. This summer, Dan will be working for VMware in Palo Alto, California. 
+              <br>
+              <%= link_to "LinkedIn", "http://www.linkedin.com/profile/view?id=155319533&trk=hb_tab_pro_top" %> |
+              <%= link_to "Github", "https://github.com/danthaman44" %> 
+        </div>
+       
+  </div>
 
 
 		
