--- a/app/views/user_mailer/invite_existing_user.html.erb
+++ b/app/views/user_mailer/invite_existing_user.html.erb
@@ -1,20 +1,17 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Hi there!</h1>
+    <h1>Hi there, <%= @fuser.username %></h1>
     <p>
       A friend has invited you to join a trial on TrialTracker. 
     </br>
-      We see that you currently do not have an account. 
+      The code for joining this trial is: <%=@trialid %>.
     </p>
     <p>
-      Follow this link to make an account: <%= @url %>.
-      <br>
-      Once you have registered, the code for joining this trial is: <%=@trialid %>.
+      Follow this link and proceed to add the code: <%= @url %>.
     </p>
     <p>Thank you and have a great day!</p>
   </body>
