--- a/app/views/user_mailer/invite_new_user.text.erb
+++ b/app/views/user_mailer/invite_new_user.text.erb
@@ -1,9 +1,9 @@
-Hi there, <%= @fuser.username %>
+Hi there!
 =================================
 
 A friend has invited you to a trial. 
 
-The code for joining this trial is: <%=@ctrial %>.
-  Follow this link and proceed to add the code: <%= @url %>.
+We see that currently do not have an account.
+  Follow this link to register: <%= @url %>.
   
 Thank you and have a great day!
