--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -33,8 +33,8 @@
                         Logged in as <a href="#" class="navbar-link">Username</a>
                         </p> -->
                         <ul class="nav">                     
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">Contact</a></li>
+                            <li><%= link_to("About", about_path) %></li>
+                            <li><%= link_to("FAQ", faq_path) %></li>
                         </ul>
                      
                          <ul class="nav pull-right">   
