--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -27,7 +27,7 @@
       }
        
       .ch-img-3 { 
-          background-image: url(../images/6.jpg);
+          background-image: url(/assets/sean.jpg);
       }
 
       .ch-info {
@@ -111,12 +111,10 @@
 
                     <div class="nav-collapse collapse">
                         <p class="navbar-text pull-right">
-                        Logged in as <a href="#" class="navbar-link"><%= session[:username] %></a>
                         </p>
                         <ul class="nav">
                             <li><a href="#about">About</a></li>
                             <li><a href="#contact">FAQ</a></li>
-                            <li> <%=link_to("Logout", logout_path) %> </li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
@@ -151,6 +149,27 @@
         </div>
        
   </div>
+     <hr>
+     <div class = "row-fluid">
+   
+        <div class="ch-item ch-img-3 span3">
+               <div class="ch-info">
+                      <h3>Sean Miller</h3>
+                </div>    
+                
+        </div>
+        <div class = "offset3">
+             Sean is a rising senior at Duke University majoring in Computer Science. He has an interest and previous work experience
+             with start-ups. He developed the mobile website for KoalaCab, a local cab-sharing service for students. 
+             Last summer, Sean worked for Google in Mountain View, California, and will be returning to Google's
+             New York office this summer.    
+              <br>
+              <%= link_to "LinkedIn", "http://www.linkedin.com/profile/view?id=230116943&authType=NAME_SEARCH&authToken=HwZB&locale=en_US&srchid=01228572-911c-4731-af89-14258aa8b5ab-0&srchindex=1&srchtotal=1402&goback=%2Efps_PBCK_sean+miller_*1_*1_*1_*1_*1_*1_*2_*1_Y_*1_*1_*1_false_1_R_*1_*51_*1_*51_true_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2_*2&pvs=ps&trk=pp_profile_name_link" %> |
+              <%= link_to "Github", "https://github.com/vfseanm" %> 
+        </div>
+       
+  </div>
+
     <hr>
        <div class = "row-fluid">
    
