--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -113,8 +113,7 @@
                         <p class="navbar-text pull-right">
                         </p>
                         <ul class="nav">
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">FAQ</a></li>
+                            <li><a href="/faq">FAQ</a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
