--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
- 
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -286,7 +286,7 @@ class = 'active'
             <hr>
             
             <footer>
-                <p>&copy; Company 2012</p>
+                <p>&copy; 2013</p>
             </footer>
             
         </div><!--/.fluid-container-->
