--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -24,8 +24,7 @@
                         Logged in as <a href="#" class="navbar-link"><%= session[:username] %></a>
                         </p>
                         <ul class="nav">
-                            <li><a href="#about">About</a></li>
-                            <li><a href="#contact">FAQ</a></li>
+                            <li><a href="/about">About</a></li>
                             <li> <%=link_to("Logout", logout_path) %> </li>
                         </ul>
                     </div><!--/.nav-collapse -->
