--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -117,6 +117,23 @@
 				filter: alpha(opacity = 90);padding-top: 30px; padding-left: 30px; padding-right: 30px; padding-bottom: 50px; background-color:#FFF"><h3 style="
 				margin-bottom: 10px;
 				">
+				<% if session[:registererror] == "noUsername" %>
+        			<div class="alert">
+           			 <button type="button" class="close" data-dismiss="alert">&times;</button><small>You must enter a username for your account.</small>
+        			</div>
+    			<% end %>
+    			<% if session[:registererror] == "noEmail" %>
+        			<div class="alert">
+           			 <button type="button" class="close" data-dismiss="alert">&times;</button><small>You must enter an email for your account.</small>
+        			</div>
+    			<% end %>
+    			<% if session[:registererror] == "passwordMismatch" %>
+        			<div class="alert">
+           			 <button type="button" class="close" data-dismiss="alert">&times;</button><small>The passwords that you entered do not match.</small>
+        			</div>
+    			<% end %>
+    		
+    			<% session[:registererror] = nil%>
 				
 				New to TrialTracker?<br><span style="font-size: 26px;">Sign up!</span></h3>
 						<%= form_tag ("/register") do %>
