--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -175,15 +175,25 @@
                     
 
                     <div class="nav-collapse collapse">
-                        <p class="navbar-text pull-right">
-                        Logged in as <a href="#" class="navbar-link"><%= session[:username] %></a>
-                        </p>
+                       <!--  <p class="navbar-text pull-right">    
+                              Logged in as <a href="#" class="navbar-link"><%= session[:username] %></a>      -->  
+                          
+                          <div class="btn-group pull-right">        
+                            <a class="btn btn-link dropdown-toggle" data-toggle="dropdown" href="#">
+                              <%= session[:username] %>
+                              <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                              <li> <a> Account </a> </li>
+                              <li> <%=link_to("Logout", logout_path) %> </li>
+                            </ul>
+                          </div>
+                          <p class = "navbar-text pull-right"> Logged in as </p>
+                    <!--     </p> -->
                         <ul class="nav">
-
                             <li> <%= link_to("About", about_path) %></li>
 
                             <li><%= link_to("FAQ", faq_path) %></li>
-                            <li> <%=link_to("Logout", logout_path) %> </li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
@@ -197,7 +207,7 @@
                 <div class="span3" >
                     <div class="well sidebar-nav" data-spy="affix" style = "width:282px">
                         <ul class="nav nav-list">
-                            <li class="nav-header"><h5><%= session[:username] %><h5></li>
+                            <li class="nav-header"><h5><%= session[:username] %><h5></li>   
                         <!--     <li class="nav-header">My Trials</li>
                             <li class="active"><a href="#">Cancer</a></li>
                             <li><a href="#">Flesh Eating Bacteria</a></li> -->
