updated about page, commented code

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 
 <html>
+<!-- Sean Miller, Dan Deng, Ash Sundar -->
+<!-- This is the front end code for the main page -->
     <head>
         <meta charset="utf-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -229,7 +231,6 @@
 
 <!-- *********** modal is in views/home/_modal.html.erb ****************-->
         <%= render "modal" %>
-        <%= render "editmodal" %>
 
 
                 <div class="span9">
