--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -30,6 +30,10 @@
           background-image: url(/assets/sean.jpg);
       }
 
+      .ch-img-4 { 
+          background-image: url(/assets/ash2.jpg);
+      }
+
       .ch-info {
           position: absolute;
           width: 100%;
@@ -185,6 +189,24 @@
               <br>
               <%= link_to "LinkedIn", "http://www.linkedin.com/profile/view?id=155319533&trk=hb_tab_pro_top" %> |
               <%= link_to "Github", "https://github.com/danthaman44" %> 
+        </div>
+       
+  </div>
+    <hr>
+        <div class = "row-fluid">
+   
+        <div class="ch-item ch-img-4 span3">
+               <div class="ch-info">
+                      <h3>Ash Sundar</h3>
+                </div>    
+                
+        </div>
+        <div class = "offset3">
+              Ash is a rising senior at Duke University majoring in Computer Science. 
+              He currently works at the Duke Office of Informational Technology.
+              <br>
+              <%= link_to "Github", "https://github.com/AshSundar" %> 
+             
         </div>
        
   </div>
