--- a/app/views/splashes/index.html.erb
+++ b/app/views/splashes/index.html.erb
@@ -1,5 +1,6 @@
 <html>
-
+<!-- Sean Miller, Dan Deng, Ash Sundar -->
+<!-- This is the front end code for the splash page -->
 <head>
 	<link href="/assets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
 	<link href="/assets/bootstrap-responsive.css" rel="stylesheet">
