--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -175,21 +175,18 @@
                     
 
                     <div class="nav-collapse collapse">
-                       <!--  <p class="navbar-text pull-right">    
-                              Logged in as <a href="#" class="navbar-link"><%= session[:username] %></a>      -->  
-                          
-                          <div class="btn-group pull-right">        
-                            <a class="btn btn-link dropdown-toggle" data-toggle="dropdown" href="#">
-                              <%= session[:username] %>
-                              <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                              <li> <a> Account </a> </li>
-                              <li> <%=link_to("Logout", logout_path) %> </li>
-                            </ul>
-                          </div>
-                          <p class = "navbar-text pull-right"> Logged in as </p>
-                    <!--     </p> -->
+                      
+
+          <ul class="nav pull-right">
+            <li class="dropdown"><a href="#" id="drop3" role="button" class="dropdown-toggle" data-toggle="dropdown"><%= session[:username] %> <b class="caret"></b></a>
+              <ul class="dropdown-menu" role="menu" aria-labelledby="drop3">
+                <li> <a> Account </a> </li>
+                <li> <%=link_to("Logout", logout_path) %> </li>
+              </ul>
+            </li>
+          </ul>
+                   
+                   <p class = "navbar-text pull-right"> Logged in as </p>
                         <ul class="nav">
                             <li> <%= link_to("About", about_path) %></li>
 
