--- a/app/views/home/_settings.html.erb
+++ b/app/views/home/_settings.html.erb
@@ -76,8 +76,9 @@ in active
             <% else %>
             <%= trial.submit "Update", {:class => "btn btn-success", :onclick => "return confirm('Are you sure you want to update settings?')", :disabled => true}%> 
             <% end %>
-
+         <%end%>
         </td>
+
 
         <td>
           &nbsp &nbsp
@@ -87,13 +88,13 @@ in active
 
           <% if @user.id == @current_trial.userowner %>
           <%= button_to("Leave Trial", {:controller => :trials,
-          :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure? If you leave this trial, it will be deleted')", :method => :delete, :remote => true}) %>
+          :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :style => "margin-top: 20px", :onclick => "return confirm('Are you sure? If you leave this trial, it will be deleted')", :method => :delete, :remote => true}) %>
           <% else %> 
           <%= button_to("Leave Trial", {:controller => :trials,
-                    :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :onclick => "return confirm('Are you sure you want to remove yourself from this trial?')", :method => :delete, :remote => true}) %>
+                    :action => 'destroy', :id => @current_trial.id }, {:class => "btn btn-danger", :style => "margin-top: 20px",       :onclick => "return confirm('Are you sure you want to remove yourself from this trial?')", :method => :delete, :remote => true}) %>
           <% end %>
       <%end%>
-        </td>
+      </td>
         
       </tr>
     </table>
@@ -152,7 +153,7 @@ in active
     </div>
   </div>
 
-  <% end %>
+<% end %>
 
     <div class = "row-fluid">
 
@@ -180,7 +181,7 @@ in active
             <% end %>
 
         <%end%>
-    <%end%>
+
 
         </thead>
       </table>
