--- a/app/views/user_mailer/invite_new_user.html
+++ b/app/views/user_mailer/invite_new_user.html
@@ -5,7 +5,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Hi there!</h1>
+    <h2>Hi there!</h2>
     <p>
       A friend has invited you to join a trial on TrialTracker. 
     </br>
@@ -14,7 +14,7 @@
     <p>
       Follow this link to make an account: <%= @url %>.
       <br>
-      Once you have registered, the code for joining this trial is: <%=@trialid %>.
+      Once you have logged in, you can join by clicking the green Add Trial button and entering the code for this trial: <b> <%=@trialid %></b>.
     </p>
     <p>Thank you and have a great day!</p>
   </body>
