--- a/app/views/user_mailer/invite_existing_user.html.erb
+++ b/app/views/user_mailer/invite_existing_user.html.erb
@@ -4,15 +4,15 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Hi there, <%= @fuser.username %></h1>
+    <h2>Hi there, <%= @fuser.username %></h2>
     <p>
       A friend has invited you to join a trial on TrialTracker. 
     </br>
-      The code for joining this trial is: <%=@trialid %>.
+      The code for joining this trial is: <b><%=@trialid %></b>.
     </p>
     <p>
       Follow this link and proceed to add the code: <%= @url %>.
     </p>
-    <p>Thank you and have a great day!</p>
+    <p>Thanks and have a great day!</p>
   </body>
 </html>
