--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -3,13 +3,13 @@
 <div id="addTrialModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3 id="myModalLabel">Add a trial</h3>
+    <h3 id="myModalLabel">Add Trial</h3>
   </div>
 
   <div class="modal-body" height="500px">
     <div class = "row-fluid">
     <div class="span5" style ="padding-left:15px;">
-    <h4>Join an existing Trial</h4>
+    <h4>Join an Existing Trial</h4>
     <%= form_tag("/join", :method => "get") do %>
 
     <div class="control-group">
@@ -27,7 +27,7 @@
     
 
   <div class="span6" style = "margin-bottom:15px; padding-left:30px; border-left: 1px solid #eeeeee">
-    <h4>Create a new Trial</h4>
+    <h4>Create a New Trial</h4>
 
    <!--  <%= render 'trials/form' %> -->
 
@@ -81,62 +81,20 @@
     </div>
   </div>
 </div>
+<%= f.submit :class => "btn btn-success", :id => "new_trial", disable_with: "Submitting..." %>
+    <% end %>
 
-  <style>
-.datepicker{z-index:1151;}
-</style>
-
-
-
-
-
-    
-    
-  <!--       <fieldset>
-
-            <input class="span8" type="text" placeholder="Trial Name"> 
-
-            <div class="input-append">
-                <input class="span8" type="text" placeholder="Invite Someone" id="appendedInputButton" type="text">
-                <button class="btn" type="button">+</button>
-            </div>
-
-            <span class="help-block">*Optional - Enter a valid email</span>
-
-
- ****************** Advanced Options ***********************
-
-
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">
-  Advanced Options
-</button> 
- 
-<div id="demo" class="collapse">
-    <p>More Options Here</p>
-       
-    </div>
-    <p></p>
-
- ****************** End Advanced Options ***********************
-
-
-
-
-        </fieldset> -->
-    
-   <!--  <button type="submit" class="btn">Submit</button> -->
+        <style>
+          .datepicker{z-index:1151;}
+        </style>
 
 
   </div>
 </div>
 
-  <div class="modal-footer">
-    <%= f.submit :class => "btn btn-primary", :id => "new_trial", disable_with: "Submitting..." %>
-    <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    <!-- <button class="btn btn-primary" id = "addTrial" data-dismiss="modal">Add Trial</button> -->
-     
-    <% end %>
-  </div>
+        <div class="modal-footer">
+          <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+        </div>
 </div>
 </div>
 
