--- a/app/views/home/_modal.html.erb
+++ b/app/views/home/_modal.html.erb
@@ -15,7 +15,7 @@
     <div class="control-group">
     <label class="control-label" for="inputEmail">Trial Code</label>
     <div class="controls">
-       <%= number_field_tag(:trial_id, nil, {:style => "height:30px; width:180px;"})%>
+       <%= text_field_tag(:trial_id, nil, {:style => "height:30px; width:180px;"})%>
     </div>
   </div>
   <%= submit_tag "Join Trial", :class=>"btn btn-success"%> 
