--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -220,7 +220,7 @@
                            
                             <%= render 'trials/index' %>
                             
-                            <li class="nav-header">Add or join more Trials</li>
+                            <li class="nav-header">Add more Trials</li>
                             <a href="#addTrialModal" role="button" class="btn btn-success" data-toggle="modal">Add Trial</a>
                         </ul>
                     </div><!--/.well -->
