--- a/app/views/home/_account.html.erb
+++ b/app/views/home/_account.html.erb
@@ -2,7 +2,7 @@
                             
     <div class="tab-pane fade
 
-<% if @current_tab == 'account' %>
+<% if session[:current_tab] == 'account' %>
 in active
   <% end %>
 
@@ -10,19 +10,9 @@ in active
 
 <div class="row-fluid">
 <div class= "span8">
-	 <legend>Change Account Information</legend>
-            <%= form_tag ("/register") do %>
+	 <legend>Change Password</legend>
+            <%= form_tag ("/changeaccount") do %>
 					<table>
-						<tr>
-
-    						<%= text_field_tag :curmail, '', :style => "height:30px", :placeholder => "Current email"  %>
-    						&nbsp
-						</tr>
-						<tr>
-
-    						<%= text_field_tag :newemail, '', :style => "height:30px", :placeholder => "New email"  %>
-    						&nbsp
-						</tr>
 						<tr>
    							<%= password_field_tag :curpassword, '', :style => "height:30px", :placeholder => "Current password"  %>
  							&nbsp &nbsp
@@ -30,19 +20,25 @@ in active
  						<tr>
    							<%= password_field_tag :newpassword, '', :style => "height:30px", :placeholder => "New password"  %>
  							&nbsp &nbsp
-   							<%= password_field_tag :verify, '', :style => "height:30px", :placeholder => "Retype new password"  %>
+   							<%= password_field_tag :verifypass, '', :style => "height:30px", :placeholder => "Retype new password"  %>
    							<br/>
    								<p><input type="checkbox" id="emailupdates" name="emailupdates" value="emailupdates" checked="checked"> Receive Email Updates</p>
-   							<h5>By clicking OK, your password or email will have 
+   							<h5>By clicking OK, your password will have 
    							changed!</h5>
     						<%= submit_tag ('Change'),  :class => "btn btn-primary", :style=> "width: 240px; height: 50px" %>
 						</tr>
 					</table>
+				<% if session[:accounterror] == true %>
+					<div class="alert">
+           				 <button type="button" class="close" data-dismiss="alert">&times;</button>Passwords entered do not match 
+        			</div>
+        		<%elsif session[:accounterror] == false%>
+        			<div class="alert alert-success">
+            			<button type="button" class="close" data-dismiss="alert">&times;</button>You have successfully changed your password!
+       				 </div>
+        		<%end%>
          	<%end%>
     </div>
-    <div class = "span4">
-        
-</div>
 </div> <!-- end row -->
 
 <div id ="blanka"> </div>
