--- a/app/views/home/_view_trends.html.erb
+++ b/app/views/home/_view_trends.html.erb
@@ -2,7 +2,7 @@
                             
     <div class="tab-pane fade
 
-<% if @current_tab == 'view_trends' %>
+<% if session[:current_tab] == 'view_trends' %>
 in active
   <% end %>
 
