--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,6 +1,9 @@
 <head>
 	<link href="/assets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
 	<style type="text/css">
+
+    body {background-image:url('/assets/medical_billing.png');}
+
 		hr { display: block; height: 1px;
     		border: 0; border-top: 1px solid #ccc;
     		margin: 1em 0; padding: 0; }
