--- a/app/views/static/faq.html.erb
+++ b/app/views/static/faq.html.erb
@@ -1,6 +1,8 @@
 <head>
 	<link href="/assets/bootstrap.css" media="screen" rel="stylesheet" type="text/css" />
 	<style type="text/css">
+
+    body {background-image:url('/assets/medical_billing.png');}
 		hr { display: block; height: 1px;
     		border: 0; border-top: 1px solid #ccc;
     		margin: 1em 0; padding: 0; }
@@ -50,12 +52,17 @@
 		<p></p></br>
 
       <em>How do I change the settings of my Trial?</em><p></p>
-    <small> Click on the "Settings" tab. From there, you can edit the Trial's name, goals, and dates. You can also leave the trial. </small>
+    <small> Click on the "Settings" tab. From there, you can edit the Trial's name, goals, and dates IF you are the trial administrator. You can also leave the trial. </small>
+    <p></p></br>
+
+    <em>How do I invite somebody to my trial?</em><p></p>
+    <small> You can only invite people if you are the trial administrator. If you are the administrator, go to the "Collaborators" section of the "Settings" tab. You can invite people through email from there. </small>
     <p></p></br>
 
 		<em>How is the 'projected' line calculated?</em><p></p>
 		<small>First, we take the most recent total for that category and divide it by the number of days the trial has been going on. This gives us your average number of subjects logged per day. Then we draw the line by simply adding that number to your total every day until your trial's end date.</small>
 		<p></p></br>
+
 		<em>How is the 'target' line calculated?</em><p></p>
 		<small>First, we divide your goal by the length of your trial in days. This gives us the number of subjects you need to enroll every day to be right on track. The line is drawn by starting at zero at your start date and moving up by this amount every day, until you reach your goal.</small>
 		
