--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
+<%= analytics_init if Rails.env.production? %>
 </head>
 
 <body>
